duicontrolpanel (0.12.22~unreleased) unstable; urgency=low

  * new version

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 15 Jun 2011 11:24:42 +0200

duicontrolpanel (0.12.21) unstable; urgency=low

  * Fixes: NB#260681 - 'Show events from:'
    §qtn_home_events_settings_subheader§ subheader should be shown in
    Notifications -> Events feed

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 02 Jun 2011 15:45:48 +0200

duicontrolpanel (0.12.20) unstable; urgency=low

  * Fixes: NB#260186 - Please remove the help icon from the reset
    category header...
  * Fixes: NB#259996 - When opening settings, all the content comes with
    a flicker

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 27 May 2011 15:23:43 +0200

duicontrolpanel (0.12.19) unstable; urgency=low

  * Fixes: NB#258212 - On reopening the settings , the settings app is
    getting minimized

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 25 May 2011 10:42:10 +0200

duicontrolpanel (0.12.18) unstable; urgency=low

  * Fixes: NB#255312 - Error seen at 'QDBusConnection: session D-Bus
    connection created before QCoreApplication. Application may
    misbehave'
  * Fixes: NB#256581 - Updated to style for horizontal separators
  * Fixes: NB#256331 - [TASK] Closing transition is not proper while
    closing the windows
  * Fixes: NB#253644 - Settings; String §qtn_locfw_positioning§ is
    clipped in Russian language

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 23 May 2011 15:56:03 +0200

duicontrolpanel (0.12.17) unstable; urgency=low

  * Fixes: NB#255261 - Brightness slider missing when accessed from a
    deep link
  * Fixes: NB#255038 - Settings; while searching for the string
    Brigtnees will be shown as Display in Settings view
  * Fixes: NB#254883 - Settings main page layout jumps when opened
  * Fixes: NB#255158 - controlpanel does not support MSheet as the main view
    of an applet

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 11 May 2011 15:58:49 +0200
