@@ -3,7 +3,7 @@ Parent=Notifications & Events
 Name="Notifications"
 Name-logical-id=qtn_noti_settings_title 
 
-
+MainApplets=PrivateMode
 Translation-catalogs=notification
 
 AutoStartApplet=1
