@@ -62,3 +62,6 @@ meego {
     DEFINES += FREE_ORIENTATION
 }
 
+DEFINES += QT_USE_FAST_CONCATENATION
+DEFINES += QT_USE_FAST_OPERATOR_PLUS
+
