@@ -1,8 +1,9 @@
 duicontrolpanel (0.12.22~unreleased) unstable; urgency=low
 
-  * new version
+  * Fixes: NB#265196 - "Privacy mode" plug-in on Notifications settings page
+    should be visually separated from rest of the plug-ins
 
- -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 15 Jun 2011 11:24:42 +0200
+ -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 20 Jun 2011 16:34:44 +0200
 
 duicontrolpanel (0.12.21) unstable; urgency=low
 
